[project]
name = "izabellealler-github-io"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = []

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.0",
    "taskipy>=1.13.0",
]

[tool.ruff]
line-length = 79
extend-exclude = []

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
venv = '.venv\Scripts\activate'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format' 